feat: tailwindcss styles

--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -20,7 +20,8 @@
             <% end %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
+        <a href="https://phoenixframework.org/" class="phx-logo text-semibold text-3xl">
+          This is the logo...
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
