--- a/lib/easy_todos_web/live/todo_live.html.leex
+++ b/lib/easy_todos_web/live/todo_live.html.leex
@@ -1,6 +1,6 @@
 <form action="#" phx-submit="add">
-  <%= text_input :todo, :title, placeholder: "What do you want to get done?" %>
-  <%= submit "Add", phx_disable_with: "Adding..." %>
+  <%= text_input :todo, :title, placeholder: "What do you want to get done?", class: "w-full p-2 mb-2 border text-thin" %>
+  <%= submit "Add", phx_disable_with: "Adding...", class: "bg-blue-600 p-2 text-white rounded" %>
 </form>
 
 <%= for todo <- @todos do %>
