--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -9,7 +9,7 @@
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <header>
       <section class="container">
         <nav role="navigation">
@@ -21,8 +21,7 @@
           </ul>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo text-semibold text-3xl">
-          This is the logo...
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
+          Lazy todo...
         </a>
       </section>
     </header>
