--- a/lib/easy_todos_web/live/todo_live.html.leex
+++ b/lib/easy_todos_web/live/todo_live.html.leex
@@ -1,22 +1,25 @@
-<form action="#" phx-submit="add">
-  <div class="grid grid-cols-3">
-    <%= text_input :todo, :title, placeholder: "What do you want to get done?", 
-        class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 col-span-2" %>
-    <%= submit "Add a new Todo", phx_disable_with: "Adding...", 
-        class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 bg-blue-600 text-white" %>
-  </div>
-</form>
-
-<%= for todo <- @todos do %>
-  <div class="todo-card">
+<div class="h-auto">
+  <h1 class="text-2xl text-semibold mb-4">Today Todo's</h1>
+  <form action="#" phx-submit="add">
     <div class="grid grid-cols-3">
-      <div class="col-span-2">
-        <%= checkbox(:todo, :done, phx_click: "toggle_done", phx_value_id: todo.id, value: todo.done) %>
-        <%= todo.title %>
-      </div>
-      <div class="text-right">
-        <%= link "Delete", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+      <%= text_input :todo, :title, placeholder: "What do you want to get done?", 
+          class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 col-span-2" %>
+      <%= submit "Add a new Todo", phx_disable_with: "Adding...", 
+          class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 bg-blue-600 text-white" %>
+    </div>
+  </form>
+
+  <%= for todo <- @todos do %>
+    <div class="todo-card">
+      <div class="grid grid-cols-3">
+        <div class="col-span-2">
+          <%= checkbox(:todo, :done, phx_click: "toggle_done", phx_value_id: todo.id, value: todo.done) %>
+          <%= todo.title %>
+        </div>
+        <div class="text-right">
+          <%= link "x", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+        </div>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
