feat: alpha styles for todos/

--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -9,9 +9,9 @@
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-white">
     <header>
-      <nav class="w-full bg-blue-700 text-white flex justify-between flex-wrap p-6 md:h-40">
+      <nav class="w-full bg-blue-700 text-white flex justify-between flex-wrap p-6 md:h-20">
         <div class="flex items-center flex-no-shrink tracking-tight text-xl font-semibold mr-4">Easy Todos</div>
 
         <div class="block lg:hidden">
@@ -24,7 +24,7 @@
           <div class="text-sm lg:flex-grow">
             <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">About</a>
             <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">Deleted</a>
-            <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white  mr-4 hover:border-transparent hover:text-teal hover:bg-white hover:text-blue-700 mt-4 lg:mt-0">Projects</a>
+            <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white  mr-4 hover:border-transparent hover:text-teal hover:bg-white hover:text-blue-700 mt-4 lg:mt-0">Calendar</a>
           </div>
         </div>
       </nav>
