--- a/lib/easy_todos_web/live/todo_live.html.leex
+++ b/lib/easy_todos_web/live/todo_live.html.leex
@@ -1,25 +1,46 @@
-<div class="h-auto">
-  <h1 class="text-2xl text-semibold mb-4">Today Todo's</h1>
+<div class="mb-4">
+  <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
+    Prev
+  </button>
+
+  <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
+    1
+  </button>
+
+  <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
+    2
+  </button>
+
+  <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
+    Next
+  </button>
+</div>
+
+
+<div class="h-auto p-4 rounded-lg shadow-lg bg-gray-100">
   <form action="#" phx-submit="add">
     <div class="grid grid-cols-3">
       <%= text_input :todo, :title, placeholder: "What do you want to get done?", 
-          class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 col-span-2" %>
+          class: "px-3 py-3 bg-white shadow-lg rounded-lg mx-2 mb-2 col-span-2" %>
       <%= submit "Add a new Todo", phx_disable_with: "Adding...", 
-          class: "px-2 py-2 bg-white shadow-lg rounded-lg mx-2 mb-2 bg-blue-600 text-white" %>
+          class: "px-3 py-3 bg-white shadow-lg rounded-lg mx-2 mb-2 bg-blue-600 text-white" %>
     </div>
   </form>
 
-  <%= for todo <- @todos do %>
-    <div class="todo-card">
-      <div class="grid grid-cols-3">
-        <div class="col-span-2">
-          <%= checkbox(:todo, :done, phx_click: "toggle_done", phx_value_id: todo.id, value: todo.done) %>
-          <%= todo.title %>
-        </div>
-        <div class="text-right">
-          <%= link "x", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+  <div class="mt-10">
+    <%= for todo <- @todos do %>
+      <div class="todo-card">
+        <div class="grid grid-cols-3">
+          <div class="col-span-2">
+            <%= checkbox(:todo, :done, phx_click: "toggle_done", phx_value_id: todo.id, value: todo.done, 
+                class: "mr-4 form-checkbox h-5 w-5 text-gray-600") %>
+            <%= todo.title %>
+          </div>
+          <div class="text-right">
+            <%= link "x", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
