--- a/lib/easy_todos_web/live/todo_live.html.leex
+++ b/lib/easy_todos_web/live/todo_live.html.leex
@@ -1,6 +1,6 @@
 <div class="mb-4">
   <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
-   Yesterday
+   Old todos
   </button>
 
   <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
@@ -12,7 +12,7 @@
   </button>
 
   <button class="bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-700 hover:border-transparent rounded-lg">
-    Long term
+    Future todos
   </button>
 </div>
 
