--- a/lib/easy_todos_web/live/past_todo_live.html.leex
+++ b/lib/easy_todos_web/live/past_todo_live.html.leex
@@ -1,12 +1,10 @@
-<div class="h-auto p-4 rounded-lg shadow-lg bg-blue-700 mt-4">
-  <h1 class="font-semibold text-white">Completed Todo's</h1>
+<div class="h-auto p-4 rounded-lg shadow-lg bg-gray-500 mt-4">
+  <h1 class="font-semibold text-white">Old Todo's</h1>
   <div class="mt-2">
     <%= for ctodo <- @ctodos do %>
       <div class="todo-card">
         <div class="grid grid-cols-3">
           <div class="col-span-2">
-            <%= checkbox(:todo, :done, phx_click: "toggle_done", phx_value_id: ctodo.id, value: ctodo.done, 
-                class: "mr-4 form-checkbox h-5 w-5 text-gray-600") %>
             <%= ctodo.title %>
           </div>
           <div class="text-right">
