--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -30,11 +30,11 @@
     </header>
 
     <div class="w-full mt-4 mb-10 text-right pr-28">
-      <%= link "Travel to Past", to: "/past-todos", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
+      <%= link "Previous", to: "/past-todos", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
 
-      <%= link "Present Day", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
+      <%= link "Present", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
 
-      <%= link "Travel to Future", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
+      <%= link "Future", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
     </div>
     <%= @inner_content %>
   </body>
