--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -34,7 +34,7 @@
 
       <%= link "Present", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
 
-      <%= link "Future", to: "/", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
+      <%= link "Future", to: "/future-todos", class: "bg-transparent hover:bg-blue-700 text-blue-700 font-semibold hover:text-white py-3 px-4 border border-blue-700 hover:border-transparent rounded-lg" %>
     </div>
     <%= @inner_content %>
   </body>
