--- a/lib/easy_todos_web/live/future_todo_live.html.leex
+++ b/lib/easy_todos_web/live/future_todo_live.html.leex
@@ -1,19 +1,30 @@
 <h1 class="font-semibold text-black text-2xl">Future Todo's</h1>
 
-<div class="h-auto p-4 mt-4">
-  <div class="mt-2">
-    <%= for past_todo <- @past_todos do %>
-      <p class="text-lg text-blue-700 font-bold mb-2"><%= past_todo.date %></p>
-      <div class="todo-card">
-        <div class="grid grid-cols-3">
-          <div class="col-span-2">
-            <%= past_todo.title %>
+<div class="h-auto p-1">
+  <div class="">
+    <%= for future_todo <- @future_todos do %>
+      
+        <div class="grid grid-cols-6 p-2 ">
+
+          <div class="todo-card bg-blue-700 text-center">
+            <div class="bg-blue-700 text-white">
+              <%= future_todo.date %>
+            </div>
           </div>
-          <div class="text-right">
-            <%= link "x", to: "#", phx_click: "delete", phx_value_id: past_todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+
+          <div class="todo-card col-span-5">
+            <div class="grid grid-cols-3">
+              <div class="col-span-2">
+                <%= future_todo.title %>
+              </div>
+              <div class="text-right">
+                <%= link "x", to: "#", phx_click: "delete", phx_value_id: future_todo.id, data: [confirm: "Deleting?"], class: "mr-4" %>
+              </div>
+            </div>
           </div>
+
         </div>
-      </div>
+      
     <% end %>
   </div>
 </div>
