--- a/lib/easy_todos_web/live/past_todo_live.html.leex
+++ b/lib/easy_todos_web/live/past_todo_live.html.leex
@@ -1,6 +1,6 @@
 <h1 class="font-semibold text-black text-2xl">Past Todo's</h1>
 
-<div class="h-auto p-4 mt-4">
+<div class="h-auto">
   <div class="mt-2">
     <%= for past_todo <- @past_todos do %>
       <div class="todo-card bg-blue-700 text-center">
