--- a/lib/easy_todos_web/live/todo_live.html.leex
+++ b/lib/easy_todos_web/live/todo_live.html.leex
@@ -1,4 +1,6 @@
-<div class="h-auto p-4 rounded-lg shadow-lg bg-gray-100">
+<h1 class="font-semibold text-black text-2xl">Today Todo's</h1>
+
+<div class="h-auto p-4 rounded-lg shadow-lg bg-gray-100 mt-2">
   <form action="#" phx-submit="add">
     <div class="grid grid-cols-4">
       <%= text_input :todo, :title, placeholder: "What do you want to get done?", 
