--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -24,7 +24,7 @@
 
         <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
           <div class="text-sm lg:flex-grow">
-            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">Deleted</a>
+            <%= link "deleted", to: Routes.todos_path(@conn, :index_deleted), class: "block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4" %>   
             <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white  mr-4 hover:border-transparent hover:text-teal hover:bg-white hover:text-blue-700 mt-4 lg:mt-0">Calendar</a>
           </div>
         </div>
