--- a/lib/easy_todos_web/templates/todos/index_deleted.html.eex
+++ b/lib/easy_todos_web/templates/todos/index_deleted.html.eex
@@ -1,1 +1,24 @@
-<h1>Deleted</h1>
+<h1 class="font-semibold text-black text-2xl">Deleted Todo's</h1>
+
+<div class="h-auto">
+  <div class="mt-2">
+    <%= for past_todo <- @deleted_todos do %>
+      <div class="todo-card bg-indigo-900 text-center">
+        <div class="bg-indigo-900 text-white">
+          <%= past_todo.date %>
+        </div>
+      </div>
+      <%= for ptodo <- @deleted_todos do %>
+        <%= if ptodo.date == past_todo.date do %>
+          <div class="todo-card bg-gray-400">
+            <div class="grid grid-cols-3">
+              <div class="col-span-2 text-white">
+                <%= ptodo.title %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
