--- a/lib/easy_todos_web/templates/todos/index_deleted.html.eex
+++ b/lib/easy_todos_web/templates/todos/index_deleted.html.eex
@@ -3,16 +3,16 @@
 <div class="h-auto">
   <div class="mt-2">
     <%= for past_todo <- @deleted_todos do %>
-      <div class="todo-card bg-indigo-900 text-center">
-        <div class="bg-indigo-900 text-white">
+      <div class="todo-card bg-red-500 text-center">
+        <div class="text-white">
           <%= past_todo.date %>
         </div>
       </div>
       <%= for ptodo <- @deleted_todos do %>
         <%= if ptodo.date == past_todo.date do %>
-          <div class="todo-card bg-gray-400">
+          <div class="todo-card bg-white border-2 border-red-500">
             <div class="grid grid-cols-3">
-              <div class="col-span-2 text-white">
+              <div class="col-span-2 text-red-500">
                 <%= ptodo.title %>
               </div>
             </div>
