feat: super admin into easy todos

--- a/lib/easy_todos_web/templates/layout/root.html.leex
+++ b/lib/easy_todos_web/templates/layout/root.html.leex
@@ -10,6 +10,11 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body class="bg-white">
+    <script>
+      /*to prevent Firefox FOUC, this must be here*/
+      let FF_FOUC_FIX;
+    </script>
+
     <header>
       <nav class="w-full bg-blue-700 text-white flex justify-between flex-wrap p-6 md:h-20">
         <div class="flex items-center flex-no-shrink tracking-tight text-xl font-semibold mr-4">
